testsuite/tests/saks/should_fail/saks_fail018.stderr

saks_fail018.hs:13:26: error: [GHC-76037]
    Not in scope: type variable ‘k’
